...
                app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                app:layout_constraintRight_toRightOf="@+id/iv_backdrop"
                app:srcCompat="@android:drawable/btn_star_big_off"
                android:layout_marginTop="20dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:elevation="1dp"
                android:onClick="onFavoriteClick"
...
